--- a/views/pastesList.pug
+++ b/views/pastesList.pug
@@ -11,7 +11,7 @@ block content
                 .card-body
                     h3.card-title(style="color:#585858;")=val + '\'s paste' 
                     h5.card-text= descriptions[index]
-                    -var editUrl = 'http://localhost:3000/paste/edit/' + index;
+                    -var editUrl = 'http://localhost:3000/pastes/' + index;
                     -var deleteUrl = 'http://localhost:3000/paste/delete/' + index;
                     .card-footer
                         a(class="btn btn-success" href=editUrl) Edit
