--- a/views/pastesList.pug
+++ b/views/pastesList.pug
@@ -11,8 +11,10 @@ block content
                 .card-body
                     h3.card-title(style="color:#585858;")=val + '\'s paste' 
                     h5.card-text= descriptions[index]
-                    -var editUrl = 'http://localhost:3000/pastes/' + index;
-                    -var deleteUrl = 'http://localhost:3000/paste/delete/' + index;
+                    -var id= index + 1;
+                    -var editUrl = 'http://localhost:3000/pastes/' + id;
+                    -var deleteUrl = 'http://localhost:3000/delete/' + id;
                     .card-footer
                         a(class="btn btn-success" href=editUrl) Edit
-                        a(class="btn btn-danger" href=deleteUrl) Delete
+                        form(method="POST" action=deleteUrl)
+                            button.btn.btn-danger(type='submit') Delete
