--- a/views/pastesList.pug
+++ b/views/pastesList.pug
@@ -11,9 +11,8 @@ block content
                 .card-body
                     h3.card-title(style="color:#585858;")=val + '\'s paste' 
                     h5.card-text= descriptions[index]
-                    -var id= index + 1;
-                    -var editUrl = 'http://localhost:3000/pastes/' + id;
-                    -var deleteUrl = 'http://localhost:3000/delete/' + id;
+                    -var editUrl = 'http://localhost:3000/pastes/' + ids[index];
+                    -var deleteUrl = 'http://localhost:3000/delete/' + ids[index];
                     .card-footer
                         a(class="btn btn-success" href=editUrl) Edit
                         form(method="POST" action=deleteUrl)
