--- a/views/editPaste.pug
+++ b/views/editPaste.pug
@@ -2,16 +2,16 @@ extends layout
 
 block content
   .card 
-    .card.header
+    .card.header.text-center
       h3= 'Edit ' + author + '\'s paste'
     .card.body
       -var action= "/edit/" + id;
       form(action= action method='POST')
           .mb-3
-            label.form-label(for='name') Author
+            label.form-label(for='name' style="color:red") Author
             input#authorName.form-control(type='text', name='author', value= author)
           .mb-3
-            label.form-label(for='description') Description
+            label.form-label(for='description' style="color:red") Description
             input#descriptionName.form-control(type='text', name='description', value= description)
-            .form-text write the paste's description
+            .form-text edit paste content
           button.btn.btn-success(type='submit') Edit
