implemented get/edit/delete a given paste + added view pastes list button

--- a/views/createPaste.pug
+++ b/views/createPaste.pug
@@ -14,3 +14,6 @@ block content
             input#descriptionName.form-control(type='text', name='description')
             .form-text write the paste's description
           button.btn.btn-success(type='submit') Post
+  .card 
+    .card-footer.text-muted.text-center
+      a(class="btn btn-secondary" href="http://localhost:3000/pastesList") View pastes list
