--- a/views/editPaste.pug
+++ b/views/editPaste.pug
@@ -5,8 +5,7 @@ block content
     .card.header.text-center
       h3= 'Edit ' + paste.name + '\'s paste'
     .card.body
-      -var action= "/edit/" + id;
-      form(action= action method='POST')
+      form(action="/edit/" + id, method='POST')
           .mb-3
             label.form-label(for='name' style="color:red") Author
             input#authorName.form-control(type='text', name='author', value= paste.name)
